--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
-    "name": "readme-stats-github",
-    "version": "1.0.0",
-    "description": "Generate your GitHub's Stats in SVG",
-    "main": "api/index.js",
-    "dependencies": {
-        "axios": "^0.21.0",
-        "node-base64-image": "^2.0.1"
-    },
-    "author": "Tuhin Kanti Pal",
-    "license": "Apache-2.0",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/cachecleanerjeet/readme-stats-github.git"
-    },
-    "keywords": [
-        "github-readme-stats"
-    ],
-    "bugs": {
-        "url": "https://github.com/cachecleanerjeet/readme-stats-github/issues"
-    },
-    "homepage": "https://github.com/cachecleanerjeet/readme-stats-github#readme"
+  "name": "readme-stats-github",
+  "version": "1.1.0",
+  "description": "Generate your GitHub's Stats in SVG",
+  "main": "src/api/withexpress.ts",
+  "dependencies": {
+    "axios": "^0.21.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "millify": "^4.0.0",
+    "node-base64-image": "^2.0.1"
+  },
+  "scripts": {
+    "dev": "nodemon ./src/withexpress.ts",
+    "build": "tsc",
+    "start": "node ./dist/withexpress.js"
+  },
+  "author": "Tuhin Kanti Pal",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tuhinpal/readme-stats-github.git"
+  },
+  "keywords": [
+    "github-readme-stats",
+    "github-stats"
+  ],
+  "bugs": {
+    "url": "https://github.com/tuhinpal/readme-stats-github/issues"
+  },
+  "homepage": "https://github.com/tuhinpal/readme-stats-github#readme",
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.3",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
+  }
 }
