--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "dev": "nodemon ./src/withexpress.ts",
-    "build": "tsc",
+    "build": "node scripts/createDynamicIndexHtml && tsc",
     "start": "node ./dist/withexpress.js"
   },
   "author": "Tuhin Kanti Pal",
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/tuhinpal/readme-stats-github#readme",
   "devDependencies": {
+    "@markdoc/markdoc": "^0.1.3",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.3",
     "nodemon": "^2.0.19",
