--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "dev": "nodemon ./src/withexpress.ts",
-    "build": "tsc",
+    "build": "tsc && node ./scripts/createDynamicIndexHtml.js",
     "start": "node ./dist/withexpress.js"
   },
   "author": "Tuhin Kanti Pal",
